--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,11 @@
     <link rel="stylesheet" href="css/home.css">
 </head>
 
-<body class="">
+<body>
+
+    <!-- <div class="d-flex p-absolute flex-row"> -->
+
+    <!-- </div> -->
 
     <div class="d-flex flex-column flex-nowrap">
 
