--- a/public/css/home.css
+++ b/public/css/home.css
@@ -15,7 +15,7 @@ body{
 .flex-column{flex-flow: column wrap;}
 .flex-row{flex-flow: row;}
 .flex-warp{flex-wrap: wrap;}
-.flex-nowarp{flex-wrap: nowrap;}
+.flex-nowrap{flex-wrap: nowrap;}
 .justify-content-start{justify-content: flex-start;}
 .justify-content-center{justify-content: center;}
 .justify-content-end{justify-content: flex-end;}
@@ -45,6 +45,9 @@ body{
 .full-height{height: 100%;}
 /* end of sizing */
 
+/* overflow */
+.overflow-none{overflow-y: hidden; overflow-x: hidden;}
+/* end of overflow */
 #messageForm{
     height: 50px;
 }#messageForm *{
@@ -63,6 +66,7 @@ body{
 
 #messagePanel{
     padding-bottom: 70px;
+    padding-top: 20px;
     overflow-y: auto;
 }
 
@@ -77,7 +81,8 @@ body{
     border-bottom-left-radius: 20px;
     border-top-right-radius: 10px;
     box-shadow: 0 5px 10px 0 rgba(1, 1, 1, 0.3);
-    
+    max-width: 500px;
+    word-wrap: break-word;
 }.message-time{
     font-size: 10px;
     color: rgb(120,120,120);
@@ -100,6 +105,7 @@ body{
 #navbar{
     padding: 10px;
     background-color: rgb(50,50,50);
+    z-index: 999;
 }#profileName{
     color: white;
     font-weight: bolder;
@@ -119,8 +125,39 @@ body{
     height: 40px;
 }
 
-#replyForm{
-    /* padding-bottom: 70px; */
+#listOnlineUser {
+  list-style: none;
+  position: fixed;
+  overflow-y: auto;
+  overflow-x: hidden;
+  min-width: 250px;
+  padding-top: 70px;
+  background-color: rgb(17, 17, 17);
+  z-index: 998;
+  transform: translatex(-100%);
+  transition: all 1s;
+  opacity: 0;
+}#listOnlineUser li p{
+    display: inline-block;
+    margin-top: 10px;
+    padding: 15px 10px;
+    color: white;
+    font-weight: bolder;
+}#listOnlineUser li span{
+    vertical-align: middle;
+    color: green;
+}#listOnlineUser.slide {
+  transform: translatex(0);
+  opacity: 1;
+}#darkerBackground{
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 997;
+}
+
+@media only screen and (max-width: 876px) {
+    .message-body{
+        max-width: 250px;
+    }
 }
 /* 
 .container {
