--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,9 +12,11 @@
 
 <body>
 
-    <!-- <div class="d-flex p-absolute flex-row"> -->
-
-    <!-- </div> -->
+    <nav>
+        <ul class="d-flex flex-column align-items-center flex-nowrap full-height" id="listOnlineUser">
+        </ul>
+    </nav>
+    <div id="darkerBackground" class="full-height full-width p-fixed invicible"></div>
 
     <div class="d-flex flex-column flex-nowrap">
 
@@ -43,6 +45,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="script/plugin.js"></script>
     <script src="script/home.js"></script>
 
 </body>
